[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paasta-tools"
dynamic = ["version"]
description = "Tools for Yelps SOA infrastructure"
readme = "README.md"
requires-python = ">=3.10.0"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Compute Infrastructure @ Yelp", email = "compute-infra@yelp.com"}
]
dependencies = [
    "aiohttp >= 3.5.4",
    "argcomplete >= 3.6.3",
    "boto",
    "boto3",
    "boto3-type-annotations",
    "botocore",
    "bravado >= 10.2.0",
    "certifi",
    "choice >= 0.1",
    "containerd",
    "cookiecutter >= 1.4.0",
    "croniter",
    "docker",
    "dulwich >= 0.17.3",
    "environment-tools",
    "ephemeral-port-reserve >= 1.0.1",
    "graphviz",
    "grpcio",
    "gunicorn",
    "humanfriendly",
    "humanize >= 0.5.1",
    "inotify >= 0.2.8",
    "ipaddress >= 1.0.22",
    "isodate >= 0.7.2",
    "jsonschema[format]",
    "kazoo >= 2.0.0",
    # the upper-bound here is mainly for things that use paasta-tools as a library and don't benefit
    # from our pinned-dependencies. The upper-bound should generally be the latest kubernetes version
    # that we can use across our different clusters (e.g, if X.0.0 removes an API version that we use
    # in any cluster, this upper-bound should be < X.0.0)
    # NOTE: the above is not exactly true anymore due to our legacy clusters...
    # we should probably also be better at setting a correct lower-bound, but that's less likely to cause issues.
    "kubernetes >= 29.0.0, < 35.0.0",
    "ldap3",
    "manhole",
    "mypy-extensions >= 0.3.0",
    "nats-py",
    "nulltype",
    "objgraph",
    "ply",
    "progressbar2>=4.3.2",
    "prometheus-client",
    "pyramid-swagger >= 2.3.0",
    "pyramid>=2.0.2",
    "pysensu-yelp >= 0.3.4",
    "PyStaticConfiguration",
    "python-crontab>=2.1.1",
    "python-dateutil >= 2.4.0",
    "pytimeparse >= 1.1.0",
    "pytz >= 2014.10",
    "requests >= 2.18.4",
    "requests-cache >= 0.4.10",
    "retry",
    "ruamel.yaml",
    "sensu-plugin",
    "service-configuration-lib >= 3.3.8",
    "signalfx",
    "slackclient >= 1.2.1",
    "sticht >= 1.1.0",
    "syslogmp",
    "transitions",
    "typing-extensions",
    "tzlocal",
    "urllib3",
    "wsgicors",
]

[project.optional-dependencies]
dev = [
    "alabaster==0.7.10",
    "Babel==2.9.1",
    "cfgv==2.0.1",
    "coverage==6.5.0",
    "debugpy==1.8.0",
    "distlib==0.3.9",
    "docutils==0.12",
    "exceptiongroup==1.1.2",
    "filelock==3.20.3",
    "flake8==7.3.0",
    "freezegun==1.5.5",
    "hypothesis==6.79.4",
    "identify==2.4.12",
    "imagesize==0.7.1",
    "iniconfig==2.0.0",
    "mccabe==0.7.0",
    "mypy==1.17.1",
    "nodeenv==1.1.4",
    "packaging==23.2",
    "path.py==8.1",
    "pathspec==0.12.1",
    "pep8==1.5.7",
    "platformdirs==4.3.8",
    "pluggy==1.2.0",
    "pre-commit==3.7.0",
    "pycodestyle==2.14.0",
    "pyfakefs==5.3.5",
    "pyflakes==3.4.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "requirements-tools==2.1.0",
    "snowballstemmer==1.2.0",
    "sortedcontainers==2.4.0",
    "Sphinx==2.2.0",
    "sphinx-rtd-theme==1.0.0",
    "sphinxcontrib-applehelp==1.0.1",
    "sphinxcontrib-devhelp==1.0.1",
    "sphinxcontrib-htmlhelp==1.0.2",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.2",
    "sphinxcontrib-serializinghtml==1.1.3",
    "tomli==2.0.1",
    "tomli-w==1.2.0",
    "types-cachetools==6.0.0.20250525",
    "types-croniter==6.0.0.20250809",
    "types-python-dateutil==2.9.0.20250822",
    "types-pytz==2025.2.0.20250809",
    "types-pyyaml==6.0.12.20250822",
    "types-requests==2.31.0.5",
    "types-retry==0.9.9.20250322",
    "types-urllib3==1.26.25.14",
    "virtualenv==20.36.0",
    "zake==0.2.2",
]
docs = [
    "alabaster==0.7.16",
    "aspy.yaml==0.3.0",
    "Babel==2.17.0",
    "cached-property==1.3.1",
    "cfgv==1.0.0",
    "docutils==0.21.2",
    "flake8==3.5.0",
    "freezegun==1.5.5",
    "identify==1.0.6",
    "imagesize==1.4.1",
    "isort==5.13.2",
    "jinja2==3.1.6",
    "lazy-object-proxy==1.4.3",
    "mccabe==0.6.1",
    "nodeenv==1.1.4",
    "path.py==8.1",
    "pbr==3.1.1",
    "pep8==1.5.7",
    "pluggy==0.6.0",
    "pre-commit==1.10.1",
    "pycodestyle==2.3.1",
    "pyflakes==1.6.0",
    "Pygments==2.19.2",
    "pytest==3.3.1",
    "pytest-asyncio==0.8.0",
    "requirements-tools==2.1.0",
    "snowballstemmer==3.0.1",
    "Sphinx==8.1.3",
    "sphinx-rtd-theme",
    "toml==0.9.4",
    "virtualenv==15.1.0",
    "wrapt==1.12.1",
]

[project.scripts]
paasta = "paasta_tools.cli.cli:main"
paasta-api = "paasta_tools.api.api:main"
paasta-deployd = "paasta_tools.deployd.master:main"
paasta-fsm = "paasta_tools.cli.fsm_cmd:main"
paasta_prune_completed_pods = "paasta_tools.prune_completed_pods:main"
paasta_cleanup_tron_namespaces = "paasta_tools.cleanup_tron_namespaces:main"
paasta_cleanup_expired_autoscaling_overrides = "paasta_tools.cleanup_expired_autoscaling_overrides:main"
paasta_list_kubernetes_service_instances = "paasta_tools.list_kubernetes_service_instances:main"
paasta_list_tron_namespaces = "paasta_tools.list_tron_namespaces:main"
paasta_setup_tron_namespace = "paasta_tools.setup_tron_namespace:main"
paasta_docker_wrapper = "paasta_tools.docker_wrapper:main"
paasta_oom_logger = "paasta_tools.oom_logger:main"
paasta_broadcast_log = "paasta_tools.broadcast_log_to_services:main"
paasta_dump_locally_running_services = "paasta_tools.dump_locally_running_services:main"
paasta_habitat_fixer = "paasta_tools.contrib.habitat_fixer:main"

[project.entry-points."paste.app_factory"]
paasta-api-config = "paasta_tools.api.api:make_app"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "paasta_tools.__version__"}

# Note: Standalone scripts are handled via a minimal setup.py file
# because the 'scripts' parameter is not supported in pyproject.toml.
# All other configuration is in this pyproject.toml file.

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
"paasta_tools.cli.fsm.template" = ["**/*"]
"paasta_tools.cli.schemas" = ["*.json"]
"paasta_tools.api.api_docs" = ["*.json"]
paasta_tools = ["py.typed"]

[tool.black]
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | |.paasta
    | _build
    | buck-out
    | build
    | dist
    | paasta_tools/paastaapi
  )/
)
'''

[tool.isort]
profile = "black"
force_single_line = true
